OC-61: fix compilation warnings about usage of deprecated JDK APIs